<resources>
    <string name="app_name">My SNS</string>
    <string name="str_error">Lỗi</string>
    <string name="str_error_socket_timeout">Ngắt kết nối với máy chủ, xin vui lòng thử lại sau</string>
    <string name="str_cancel">Hủy</string>
    <string name="str_error_default">Có lỗi xảy ra từ hệ thống. Chân thành xin lỗi vì sự bất tiện này!</string>
    <string name="str_denied_title_permission">Mở cài đặt quyền truy cập của ứng dụng</string>
    <string name="str_denied_message_permission"><![CDATA[\"Cấp quyền truy cập cho ứng dụng bằng cách vào [Cài đặt] -> [Quyền truy cập ứng dụng] \"]]></string>
    <string name="str_error_data">Lỗi xử lý dữ liệu, xin vui lòng thử lại.</string>
    <string name="label_home_menu">Trang chủ</string>
    <string name="label_friends_menu">Bạn bè</string>
    <string name="label_chat_menu">Tin nhắn</string>
    <string name="label_profile_menu">Cá nhân</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Coming soon</string>
    <string name="str_login_with_google">Tiếp tục với Google</string>
    <string name="err_no_exist">Không tồn tại</string>
    <string name="str_error_verify">Lỗi kiểm tra đăng nhập</string>
    <string name="str_had_account">Đã có tài khoản?</string>
    <string name="str_not_have_account">Không có tài khoản?</string>
    <string name="str_login_now">Đăng nhập ngay</string>
    <string name="str_register_now">Đăng kí ngay</string>
    <string name="str_or">Hoặc</string>
    <string name="str_login">Đăng nhập</string>
    <string name="str_register">Đăng kí</string>
    <string name="str_email">email</string>
    <string name="str_username">Tên người dùng</string>
    <string name="str_fullname">fullname</string>
    <string name="str_password">password</string>
    <string name="str_confirm_password">confirm password</string>
    <string name="str_firstName">Tên</string>
    <string name="str_lastName">Họ</string>
    <string name="user_avatar">user avatar</string>
    <string name="change_profile_photo">Đổi ảnh đại diện</string>
    <string name="change_password">Thay đổi password</string>
    <string name="str_descrp">Giới thiệu</string>
    <string name="str_birthday">Nhập ngày sinh</string>
    <string name="temp_count">0</string>
    <string name="posts">Bài viết</string>
    <string name="followers">Người theo dõi</string>
    <string name="following">Đang theo dõi</string>
    <string name="lorem">Thêm miêu tả về bạn</string>
    <string name="str_gender_male">Nam</string>
    <string name="str_gender_female">Nữ</string>
    <string name="str_take_new_photo">Chụp ảnh mới</string>
    <string name="str_choose_image">Chọn từ thư viện ảnh</string>
    <string name="str_deny_message">Quyền truy cập của ứng dụng bị từ chối!</string>
    <string name="settings">Cài đặt</string>
    <string name="help">Giúp đỡ</string>
    <string name="save">Lưu</string>
    <string name="str_message_update_success">Cập nhật thành công</string>
    <string name="follow">theo dõi</string>
    <string name="message">nhắn tin</string>
    <string name="no_internet">Không có kết nối internet</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="edit_profile">edit</string>
    <string name="str_sign_out">Đăng xuất</string>
    <string name="log_out_confirmation">Bạn có chắc muốn đăng xuất?</string>
    <string name="cancel">Hủy</string>
    <string name="yes">Đồng ý</string>
    <string name="label_search_menu">Tìm kiếm</string>
    <string name="nothing_was_found">Không có kết quả tìm kiếm</string>
    <string name="icon_nothing_was_found">not found</string>
    <string name="search">Tìm kiếm</string>
    <string name="user">user</string>
    <string name="find_user">Tìm kiếm người dùng</string>
    <string name="tag">hashtag</string>
    <string name="search_by_tags">Tìm kiếm theo hashtag</string>
    <string name="tag_title_format">#%s</string>
    <string name="tag_counter_format">%d bài viết</string>
    <string name="unfollow">Bỏ theo dõi</string>
    <string name="comment_icon">icon comment</string>
    <string name="str_not_any_messages_yet">Không có tin nhắn nào</string>
    <string name="write_first_message">Tạo tin nhắn đầu tiên</string>
    <string name="chattyer">chattyer</string>
    <string name="something_went_wrong">Đã có lỗi xảy ra</string>
    <string name="message_not_sent">Tin nhắn chưa được gửi</string>
    <string name="message_sent">Đã gửi tin nhắn</string>
    <string name="str_loading_dot">…</string>
    <string name="copy">Sao chép</string>
    <string name="delete">Xóa</string>
    <string name="copied_message">Đã sao chép</string>
    <string name="not_implemented">Chưa hỗ trợ</string>
    <string name="feed_icon">icon feed</string>
    <string name="no_conversations">Không có tin nhắn nào</string>
    <string name="error_load_conversations">Lỗi tải hội thoại</string>
    <string name="add_new_post">add new post</string>
    <string name="error">Lỗi</string>
    <string name="user_have_no_followers">Không có người theo dõi</string>
    <string name="user_have_no_following">Không theo dõi ai</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="new_passwd">Mật khẩu mới</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="change_passwd">Đổi mật khẩu</string>
    <string name="add">Thêm người</string>
    <string name="str_new_group">Nhóm mới</string>
    <string name="description_avatar">Avatar</string>
    <string name="description_name_group">Đặt tên nhóm</string>
    <string name="hint_search">Tìm kiếm</string>
    <string name="label_recent">Gần đây</string>
    <string name="label_recommend">Gợi ý</string>
    <string name="description_create_group">Tạo nhóm mới</string>
    <string name="label_post">Đăng</string>
    <string name="hint_create_post">Bạn đang nghĩ gì?</string>
    <string name="label_app_name">My SNS</string>
    <string name="image_to_post">new image post</string>
    <string name="feed_photo">photo feed</string>
    <string name="photos">photos</string>
    <string name="str_post_content">Bạn đang nghĩ gì?</string>
    <string name="post_was_not_uploaded">Tải lên không thành công!</string>
    <string name="post_was_uploaded">Tải lên thành công</string>
    <string name="image_post_was_not_uploaded">Ảnh chưa được tải lên!</string>
    <string name="image_post_was_uploaded">Ảnh đã được tải lên</string>
    <string name="no_logged_user">Chưa đăng nhập tài khoản</string>
    <string name="message_camera_never_ask">Không bao giờ hỏi lại</string>
    <string name="message_storage_never_ask">Không bao giờ hỏi lại</string>
    <string name="ask_permission_read_storage">Yêu cầu quyền truy cập bộ nhớ ảnh của máy</string>
    <string name="gallery_empty">Không có tệp ảnh nào để tải lên</string>
    <string name="ok">Ok</string>
    <string name="see">Xem</string>
    <string name="nothing_to_show_home">Không có bài viết nào để xem</string>
    <string name="try_again">Thử lại</string>
    <string name="post_image">image_post</string>
    <string name="like">like</string>
    <string name="comment">Nhập bình luận ở đây…</string>
    <string name="share">share</string>
    <string name="storage">storage</string>
    <string name="ex_like_count">100 lượt thích</string>
    <string name="ex_upload_date">1 giây trước</string>
    <string name="ex_comment_count">Xem thêm 100 bình luận</string>
    <string name="username">SampleUser</string>
    <string name="report">Báo cáo bài viết</string>
    <string name="show_hide">Ẩn/hiện nội dung</string>
    <string name="edit_post">Chỉnh sửa bài viết</string>
    <string name="show_description">Hiện mô tả</string>
    <string name="collapse_description">Ẩn mô tả</string>
    <string name="str_something_went_wrong">Có lỗi xảy ra</string>
    <string name="followers_not_loaded">Có lỗi xảy ra\nKhông tải được dữ liệu người theo dõi</string>
    <string name="mentions">Được gắn thẻ</string>
    <string name="liked">Đã thích</string>
    <string name="no_uploads_profile">Bạn chưa có bài viết nào.</string>
    <string name="no_uploads_user">Người này chưa có bài viết nào</string>
    <string name="no_mentions_profile">Bạn chưa được gắn thẻ trong bài viết nào.</string>
    <string name="no_mentions_user">Người này chưa được gắn thẻ trong bài viết nào.</string>
    <string name="no_likes_profile">Bạn chưa thích bài viết nào</string>
    <string name="no_liked_user">Người này chưa thích bài viết nào</string>
    <string name="no_marks_profile">Bạn chưa lưu bài viết nào</string>
    <string name="no_marked_user">Người này chưa lưu bài viết nào</string>
    <string name="you_are_currently_on_your_profile">Bạn đang ở trang cá nhân của bạn</string>
    <string name="comments">%s bình luận</string>
    <string name="seenPost">%s người xem</string>
    <string name="liked_counter">Số lượt thích</string>
    <string name="currently_on_this_profile">Đang xem trang cá nhân hiện tại</string>
    <string name="users_that_like_post">Những người đã thích</string>
    <string name="empty_users_liking_post">Chưa có ai thích bài viết này</string>
    <string name="something_went_wrong_loading_users_that_liked_post">Có lỗi xảy ra!</string>
    <string name="could_not_open_browser">Không thể mở trình duyệt!</string>
    <string name="post_edited">Đã chỉnh sửa</string>
    <string name="post_not_edited">Chỉnh sửa lỗi!</string>
    <string name="str_comment">Bình luận</string>
    <string name="not_any_comments_yet">Chưa có bình luận nào</string>
    <string name="write_first_comment">Hãy là người bình luận đầu tiên.</string>
    <string name="comment_cannot_be_empty">Bình luận không được để trống</string>
    <string name="comment_posted">Đã đăng bình luận</string>
    <string name="posts_counter">%d bài viết phù hợp</string>
    <string name="currently_on_this_tag">Bạn đang ở trang hashtag này</string>
    <string name="show_more">thêm</string>
    <string name="passwords_are_not_the_same">Nhập lại mật khẩu không đúng!</string>
    <string name="invalid_password_len">Mật khẩu phải có độ dài ít nhất 6 kí tự</string>
    <string name="change_passwd_success">Đổi mật khẩu thành công</string>
    <string name="change_passwd_failed">Đã có lỗi xảy ra. %s</string>
    <string name="passwd_is_wrong">Mật khẩu sai.</string>
    <string name="not_owner_post">Bạn không có quyền chỉnh sửa!</string>
    <string name="marked">Đã lưu</string>
    <string name="str_delete_post">Xóa bài đăng</string>
    <string name="delete_confirmation">Bạn có chắc muốn xóa?</string>
    <string name="not_allow">Bạn không có quyền thực hiện hành động này</string>
    <string name="delete_post">Xóa bài viết</string>
    <string name="users_that_seen_post">Những người đã xem</string>
    <string name="empty_users_Seen_post">Chưa có ai xem bài đăng này</string>
    <string name="something_went_wrong_loading_users_that_seen_post">Có lỗi xảy ra</string>
    <string name="str_forgot_pwd">Quên mật khẩu</string>
</resources>