<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/_32dp"
    android:animateLayoutChanges="true"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgAvatar"
        style="@style/ShapeableImageViewAvatar"
        android:layout_width="@dimen/_40dp"
        android:layout_height="@dimen/_40dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginBottom="@dimen/_2dp"
        android:contentDescription="@string/user_avatar"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_1dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintStart_toStartOf="@id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="17:48"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4dp"
        android:layout_marginEnd="@dimen/_4dp"
        android:layout_marginTop="@dimen/_1dp"
        android:layout_marginBottom="@dimen/_1dp"
        app:cardBackgroundColor="@color/color666666"
        app:cardCornerRadius="@dimen/_5dp"
        app:cardElevation="1dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/imgAvatar"
        app:layout_constraintTop_toBottomOf="@id/txtTime"
        >

        <TextView
            android:id="@+id/txtBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:text="@string/str_loading_dot"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            tools:text="@string/lorem"
            />


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>